@startuml

title __GAME's Class Diagram__\n

  namespace com.mygdx.game {
    class com.mygdx.game.ColorSplash {
        {static} + TITLE : String
        {static} + V_HEIGHT : int
        {static} + V_WIDTH : int
        + batch : SpriteBatch
        {static} + socketManager : SocketManager
        + create()
        + render()
    }
  }
  

  namespace com.mygdx.game {
    class com.mygdx.game.SocketManager {
        - socket : Socket
        + SocketManager()
        + createGame()
        + joinGame()
    }
  }
  

  com.mygdx.game.ColorSplash -up-|> com.badlogic.gdx.Game
  com.mygdx.game.ColorSplash o-- com.mygdx.game.Views.ViewManager : gsm


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
